--- a/config.toml
+++ b/config.toml
@@ -107,7 +107,7 @@ url_latest_version = "https://werkspc.com/"
 # github_subdir = ""
 
 # Google Custom Search Engine ID. Remove or comment out to disable search.
-gcs_engine_id = "011737558837375720776:fsdu1nryfng"
+gcs_engine_id = "015536944097765241217:sciqu7tvprn"
 
 # Enable Algolia DocSearch
 algolia_docsearch = false
