--- a/config.toml
+++ b/config.toml
@@ -83,6 +83,12 @@ weight = 1
 copyright = "Gary Dalton"
 privacy_policy = ""
 
+# Enable metadata panel
+  showMetadata = true
+
+# Enable last updated display
+  showLastUpdated = true
+
 # First one is picked as the Twitter card image if not set on page.
 images = ["logo_white_words.png"]
 
